# moveit_studio_kortex_ws

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml
src/: Dockerfile
src/custom_behaviors/dynamixel_control_msgs/: CMakeLists.txt  package.xml
src/custom_behaviors/set_dynamixel_position/: CMakeLists.txt  behavior_plugin.yaml  package.xml  set_dynamixel_position_plugin_description.xml
src/custom_behaviors/set_dynamixel_velocity/: CMakeLists.txt  behavior_plugin.yaml  package.xml  set_dynamixel_velocity_plugin_description.xml
src/custom_behaviors/set_dynamixel_velocity/include/set_dynamixel_velocity/: set_dynamixel_velocity.hpp
src/custom_behaviors/set_dynamixel_velocity/src/: register_behaviors.cpp  set_dynamixel_velocity.cpp
src/kinova_gen3_base_config/: CMakeLists.txt  README.md  package.xml
src/kinova_gen3_base_config/config/: cameras.yaml  config.yaml
src/kinova_gen3_base_config/config/control/: picknik_kinova_gen3.ros2_control.yaml
src/kinova_gen3_base_config/config/moveit/: kinova_gen3_servo.yaml  ompl_planning.yaml  picknik_kinova_gen3_base.srdf  servo_joint_limits.yaml  stomp_planning.yaml
src/kinova_gen3_base_config/description/: gripper_and_camera.xacro  picknik_kinova_gen3.xacro  simulation_scene.urdf.xacro
src/kinova_gen3_base_config/launch/sim/: robot_drivers_to_persist_sim.launch.py
src/kinova_gen3_base_config/objectives/: 3_waypoint_pick_and_place.xml  close_gripper.xml  move_along_path.xml  move_to_joint_state.xml  move_to_pose.xml  move_to_waypoint.xml  open_cabinet_door_affordance.xml  open_door_affordance.xml  open_gripper.xml  open_lever_handle_door.xml  open_lever_handle_door_config.yaml  pick_object.xml  pick_object_config.yaml  pick_place_object.xml  tree_nodes_model.xml
src/kinova_gen3_base_config/test/: test_waypoint_yaml_validation.py
src/kinova_gen3_mujoco_config/: CMakeLists.txt  README.md  package.xml
src/kinova_gen3_mujoco_config/config/: config.yaml
src/kinova_gen3_mujoco_config/config/control/: picknik_kinova_gen3.ros2_control.yaml
src/kinova_gen3_mujoco_config/config/moveit/: joint_limits.yaml  ompl_planning.yaml  picknik_kinova_gen3_base.srdf  sensors_3d.yaml  servo_joint_limits.yaml
src/kinova_gen3_mujoco_config/description/: picknik_kinova_gen3.xacro
src/kinova_gen3_mujoco_config/description/mujoco/: gen3_7dof.xml  gen3_7dof_mujoco.xml  gen3_7dof_rafti_fingers.xml  landsat_scene.xml  rafti_fingers_scene.xml  scene.xml
src/kinova_gen3_mujoco_config/description/mujoco/assets/: april_tag.mtl  landsat.mtl  landsat_white.mtl  rafti_finger.mtl  rafti_finger_collision_3.mtl  rafti_finger_collision_4.mtl  ring_collision.mtl  ring_collision_2.mtl
src/kinova_gen3_mujoco_config/launch/: agent_bridge.launch.xml
src/kinova_gen3_mujoco_config/objectives/: 3_waypoint_pick_and_place.xml  april_tag_object_registration.xml  close_gripper.xml  compliant_grasp_landsat.xml  compliant_grasp_rafti.xml  compliant_grasp_rafti_vfc.xml  constrained_pick_place.xml  cycle_between_waypoints.xml  joint_diagnostic.xml  jtac_parameters.yaml  move_along_path.xml  move_along_path_admittance.xml  move_to_pose.xml  move_to_waypoint.xml  re_zero_force_torque_sensors.xml  reset_planning_scene.xml  sample_april_tag.xml  set_dynamixel_position.xml  set_dynamixel_velocity.xml  take_snapshot.xml  test.xml  velocity_force_controller_test.xml  velocity_force_controller_zero.xml  visual_servo_teach_reference.xml  visual_servo_to_reference.xml  write_picknik.xml
src/kinova_gen3_mujoco_config/waypoints/: waypoints.yaml
src/kortex_behavior/: CMakeLists.txt  behavior_plugin.yaml  kortex_behavior_plugin_description.xml  package.xml  tree_nodes_model.xml
src/kortex_behavior/config/: tree_nodes_model.xml
src/kortex_behavior/include/kortex_behavior/: deactivate_controllers.hpp  switch_ros2_controllers.hpp  teleoperate_non_servo.hpp
src/kortex_behavior/src/: deactivate_controllers.cpp  register_behaviors.cpp  switch_ros2_controllers.cpp  teleoperate_non_servo.cpp
src/kortex_behavior/test/: CMakeLists.txt
src/moveit_studio_kinova_pstop_manager/: CMakeLists.txt  package.xml
src/moveit_studio_kinova_pstop_manager/src/: mock_kinova_client.cpp  mock_kinova_client_node.cpp  protective_stop_manager_node.cpp
src/picknik_kinova_gen3_base_config/: CMakeLists.txt  README.md  package.xml
src/picknik_kinova_gen3_base_config/config/: base_config.yaml  (+1 more)
src/picknik_kinova_gen3_config/: CMakeLists.txt  package.xml
src/picknik_kinova_gen3_config/calibration/: calibrate.yaml  calibration_poses.yaml  capture.yaml  scene_camera_calibration.yaml
src/picknik_kinova_gen3_config/config/: cameras.yaml  site_config.yaml
src/picknik_kinova_gen3_config/config/control/: picknik_kinova_gen3.ros2_control.yaml
src/picknik_kinova_gen3_config/config/moveit/: kinova_gen3_servo.yaml
src/picknik_kinova_gen3_config/description/: kinova_gen3_calibration.xacro  picknik_kinova_gen3.xacro
src/picknik_kinova_gen3_config/launch/: bringup.launch.py  calibrate_launch.py  hardware.launch.py
src/picknik_kinova_gen3_config/objectives/: calibrate_with_checkerboard.xml  calibrate_with_interactive_poser.xml  pick_place_object.xml  pick_place_object_config.yaml  take_snapshot.xml  teleoperate.xml
src/picknik_kinova_gen3_config/waypoints/: waypoints.yaml
src/picknik_kinova_gen3_gz_config/: CMakeLists.txt  package.xml
src/picknik_kinova_gen3_gz_config/config/: cameras.yaml  config.yaml  site_config.yaml
src/picknik_kinova_gen3_gz_config/config/control/: picknik_kinova_gen3.ros2_control.yaml
src/picknik_kinova_gen3_gz_config/description/: picknik_kinova_gen3.xacro
src/picknik_kinova_gen3_gz_config/launch/sim/: hardware.launch.py
src/picknik_kinova_gen3_site_config/: CMakeLists.txt  README.md  package.xml
src/picknik_kinova_gen3_site_config/config/: cameras.yaml  config.yaml
src/picknik_kinova_gen3_site_config/description/: picknik_kinova_gen3.xacro
src/picknik_kinova_gen3_site_config/objectives/: 3_waypoint_pick_and_place.xml
src/picknik_kinova_gen3_site_config/test/: test_parse_site_config.py
(+28 files in other folders)
