<?xml version="1.0"?>
<package format="3">
  <name>kinova_gen3_mujoco_config</name>
  <version>5.1.0</version>

  <description>Configuration package for a UR arm that can be simulated with mock hardware</description>

  <maintainer email="paul.gesel@picknik.ai">Paul Gesel</maintainer>
  <maintainer email="david.yackzan@picknik.ai">David Yackzan</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>picknik_mujoco_ros</exec_depend>
  <exec_depend>joint_trajectory_admittance_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
