<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kortex_behavior</name>
  <version>0.0.1</version>
  <description>MoveIt Studio Behaviors specific to Kinova's family of hardware</description>
  <maintainer email="anthony.baker@picknik.ai">Anthony Baker</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp</depend>
  <depend>fp</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>moveit_studio_behavior_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
