<?xml version="1.0"?>
<package format="3">
  <name>picknik_kinova_gen3_gz_config</name>
  <version>1.0.0</version>

  <description>Template config package for a Kinova Gen3 system in simulation.</description>

  <maintainer email="parthasarathy.bana@picknik.ai">Parthasarathy Bana</maintainer>
  <maintainer email="anthony.baker@picknik.ai">Anthony Baker</maintainer>

  <license>BSD-3</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kinova_gen3_base_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>picknik_ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
